--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,59 +1,37 @@
-# Your workflow name.
-name: Deploy to heroku.
+name: Deploy a Heroku Docker App
 
-# Run workflow on every push to main branch.
 on:
   push:
-    branches: [main]
+    branches:
+      - main  # Puedes cambiar esto si usas otra rama
 
-# Your workflows jobs.
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
+
     steps:
-      # Check-out your repository.
-      - name: Checkout
-        uses: actions/checkout@v2
+      - name: Clonar el repositorio
+        uses: actions/checkout@v3
 
+      - name: Instalar la CLI de Heroku
+        run: curl https://cli-assets.heroku.com/install.sh | sh
 
-### ⬇ IMPORTANT PART ⬇ ###
+      - name: Iniciar sesión en Heroku Container Registry
+        env:
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+        run: echo $HEROKU_API_KEY | docker login --username=_ --password-stdin registry.heroku.com
 
-      - name: Build, Push and Release a Docker container to Heroku. # Your custom step name
-        uses: gonuit/heroku-docker-deploy@v1.3.3 # GitHub action name (leave it as it is).
-        with:
-          # Below you must provide variables for your Heroku app.
+      - name: Establecer stack de la app como 'container'
+        env:
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+        run: heroku stack:set container --app pokemon-ga-devops
 
-          # The email address associated with your Heroku account.
-          # If you don't want to use repository secrets (which is recommended) you can do:
-          # email: my.email@example.com
-          email: ${{ secrets.HEROKU_EMAIL }}
-          
-          # Heroku API key associated with provided user's email.
-          # Api Key is available under your Heroku account settings.
-          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-          
-          # Name of the heroku application to which the build is to be sent.
-          heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
+      - name: Construir y subir imagen Docker a Heroku
+        run: |
+          docker build -t registry.heroku.com/pokemon-ga-devops/web .
+          docker push registry.heroku.com/pokemon-ga-devops/web
 
-          # (Optional, default: "./")
-          # Dockerfile directory.
-          # For example, if you have a Dockerfile in the root of your project, leave it as follows:
-          dockerfile_directory: ./
-
-          # (Optional, default: "Dockerfile")
-          # Dockerfile name.
-          dockerfile_name: Dockerfile
-
-          # (Optional, default: "")
-          # Additional options of docker build command.
-          docker_options: "--no-cache"
-
-          # (Optional, default: "web")
-          # Select the process type for which you want the docker container to be uploaded.
-          # By default, this argument is set to "web".
-          # For more information look at https://devcenter.heroku.com/articles/process-model
-          process_type: web
-          
-   
-          
-### ⬆ IMPORTANT PART ⬆ ###
+      - name: Liberar el contenedor en Heroku
+        env:
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+        run: heroku container:release web --app pokemon-ga-devops
